# voicebox

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cuda  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: publish-image.yml  test.yml
assets/: demo.sh  demo.tape
clients/claude-code/: README.md  dictate.py  settings.snippet.json  speak.sh
clients/voice-chat/: README.md  pipeline.py  pyproject.toml  test_integration.py  test_pipeline.py  test_voice_chat.py  voice_chat.py
docs/notes/: pipeline-and-client-notes.md
docs/superpowers/plans/: 2026-07-21-voicebox-speech-server.md  2026-07-22-openai-audio-depth.md
docs/superpowers/specs/: 2026-07-21-voicebox-speech-server-design.md  2026-07-22-openai-audio-depth-design.md
scripts/: fetch_models.py  smoke.sh
src/voicebox/: __main__.py  app.py  config.py  stt.py  tts.py  tts_piper.py  wav.py
tests/: conftest.py  test_app.py  test_config.py  test_latency.py  test_stt.py  test_tts.py  test_tts_piper.py
