[project]
name = "voicebox"
version = "0.2.9"
description = "Self-hosted OpenAI-compatible speech server (STT + streaming TTS)"
requires-python = ">=3.11,<3.12"
dependencies = [
  "av==18.0.0",
  "fastapi==0.139.2",
  "uvicorn[standard]==0.51.0",
  "python-multipart==0.0.32",
  "faster-whisper==1.2.1",
  "huggingface-hub==1.24.0",
  "httpx==0.28.1",
  "kokoro-onnx==0.5.0",
  "piper-tts==1.5.0",
  "soundfile==0.14.0",
  "numpy==2.4.6",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "ruff==0.15.22"]

[project.scripts]
voicebox = "voicebox.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src", "clients/voice-chat"]
testpaths = ["tests", "clients/voice-chat"]
markers = [
  "latency: host-sensitive latency benchmark",
  "model: requires local model weights and inference runtime",
]

[tool.ruff]
line-length = 100
